# git-demo

./: hello.txt
.github/workflows/: build-arm64.yml  build-ghostscript-arm64.yml  build-ghostscript.yml  build-libghostscript.yml  build_ghostscript.yml  convert.yml
entry/src/main/cpp/: CMakeLists.txt  gs_pclm.cpp
scripts/: convert.sh
